*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@602 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_desert2.cfg
+++ b/ac/packages/maps/ac_desert2.cfg
@@ -3,8 +3,8 @@ fogcolour 0x9F8255
 fog 300
 watersubdiv 16
 
-musicvol 100
-music wind_ambient.ogg
+//musicvol 100
+//music wind_ambient.ogg
 
 mapmodelreset
 
