--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -112,8 +112,9 @@ menuitem "Deathmatch"        		"mode 2; showmenu maps"
 menuitem "Team Survivor"			"mode 4; showmenu maps"
 menuitem "Survivor"					"mode 3; showmenu maps"
 menuitem "Capture the Flag"			"mode 5; showmenu maps_ctf"
-menuitem "Pistol Frenzy"				"mode 6; showmenu maps"
+menuitem "Pistol Frenzy"		    "mode 6; showmenu maps"
 menuitem "Last Swiss Standing"		"mode 9; showmenu maps"
+menuitem "One Shot, One Kill"       "mode 10; showmenu maps"
 
 
 
