--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -35,7 +35,7 @@ alias genmapitems [
 
 newmenu maps
 
-genmapitems "ac_complex ac_mines ac_depot ac_desert"
+genmapitems "ac_complex ac_mines ac_depot ac_desert ac_desert2"
 
 newmenu maps_ctf 
 
@@ -199,7 +199,7 @@ alias genbotmaps [
 	]
 ]
 
-genbotmaps "ac_complex ac_mines ac_depot ac_desert"
+genbotmaps "ac_complex ac_mines ac_depot ac_desert ac_desert2"
 
 newmenu master
 
