*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@619 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -115,7 +115,7 @@ menuitem "Capture the Flag"			"mode 5; showmenu maps_ctf"
 menuitem "Pistol Frenzy"		    "mode 6; showmenu maps"
 menuitem "Last Swiss Standing"		"mode 9; showmenu maps"
 menuitem "One Shot, One Kill"       "mode 10; showmenu maps"
-
+menuitem "Team One Shot, One Kill"  "mode 11; showmenu maps"
 
 
 // bot menus and tools
