*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@635 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -41,3 +41,26 @@ registersound "weapon/pistol_akreload" // S_RAKIMBO
 registersound "misc/change_gun"		// S_GUNCHANGE
 registersound "player/gib"			// S_GIB
 
+alias fade [ // 0=in, 1=out
+    alias stepsize 5
+    alias numsteps (div $maxmusicvol $stepsize)
+    loop (+ $numsteps 1) [
+        alias curvol (* $i $stepsize)
+        if (= $arg1 1) [ alias curvol (- $maxmusicvol $curvol) ]
+        concat musicvol ($curvol)
+        sleep (* $i 100) $s
+    ]
+] 
+  
+alias start_intermission [
+    fade 0
+    sleep 10000 [ fade 1 ]
+]
+
+alias start_game [
+    // play once (1:40)
+    music ac.ogg
+    musicvol $maxmusicvol
+    sleep 100000 [ fade 1 ]
+]
+
