*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@644 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -1,5 +1,5 @@
-// put all your personal settings in this file,
-// and all your keybindings that are different from the default (see keymap.cfg)
+// these default settings get executed whenever "saved.cfg" is not available
+// do not modify anything below, instead change settings in game, or add to autoexec.cfg
 
 name "unarmed"     // change!
 
