--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -20,10 +20,10 @@ bind A left
 bind S backward
 bind D right
 
-alias primary [ weapon 0 ]
+alias primary [ weapon (currentprimary) ]
 alias secondary [ weapon 1 ]
-alias melee [ weapon 2 ]
-alias grenades [weapon 3 ]
+alias melee [ weapon 0 ]
+alias grenades [weapon 6 ]
 
 bind 1 "primary"
 bind 2 "secondary"
