--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -30,6 +30,8 @@ bind 2 "secondary"
 bind 3 "grenades"
 bind 4 "melee"
 
+lighterror 4 //set higher (for example 8) if you experience slowdown
+
 //for alternative weapon binding (more economic) see the end of this file
 
 bind R reload
@@ -112,7 +114,7 @@ bind KP_PLUS "conskip -1"
 //uncomment lines (remove the //) below to activate
 
 //alias delta_game_0 [ if (= $arg1 1) [ primary ] [ secondary ] ]
-//bind lshift "grenade"
+//bind lshift "grenades"
 //bind lalt "melee"
 
 
