*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@661 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/src/Makefile
+++ b/ac/source/src/Makefile
@@ -71,4 +71,9 @@ client: $(CLIENT_OBJS)
 
 server: $(SERVER_FILES)
 	$(CXX) $(CXXFLAGS) -o ac_server -DSTANDALONE $(SERVER_FILES) $(SERVER_LIBS)
-	
+
+install: all
+	cp ac_client ../bin_unix/ac_client
+	cp ac_server ../bin_unix/ac_server
+	strip ../bin_unix/ac_client
+	strip ../bin_unix/ac_server
