--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -42,17 +42,24 @@ bind R reload
 // replace (div $sensitivity 2) by your desired sensitivity value:
 
 alias scopesens (div $sensitivity 2)
+alias oldsend $sensitivity
 
-bind mouse2 [ 
-	alias oldsens $sensitivity
-	sensitivity $scopesens
-	altaction 1
-	
-	onrelease [ 
+alias zoom [ 
+	if (= $arg1 1) [
+        alias oldsens $sensitivity
+        sensitivity $scopesens
+        altaction 1
+    ] [
 		sensitivity $oldsens
 		altaction 0
 	]
 ]
+
+bind mouse2 [ zoom 1; onrelease [ zoom 0 ] ]
+
+// alternative zoom toggle:
+//alias ztoggle 0
+//bind mouse2 [ alias ztoggle (= ztoggle 0); zoom $ztoggle ]
 
 	
 alias tdm   [ mode 0; map $arg1 ]
