*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@719 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -145,10 +145,11 @@ newmenu singleplayer
 // teamplay note mature yet
 //menuitem "Bot Team Deathmatch"				"alias tmp_mode 7; showmenu botskill"
 menuitem "Bot Deathmatch"					"alias tmp_mode 8; showmenu botskill"
+menuitem "Bot One Shot, One Kill"           "alias tmp_mode 12; showmenu botskill"
 
 newmenu botskill
 
-alias showmenu_enemies [ if (= $tmp_mode 8) [ showmenu enemies ] [ showmenu "team enemies" ] ]
+alias showmenu_enemies [ if (= $tmp_mode 7) [ showmenu "team enemies" ] [ showmenu enemies ] ]
 menuitem "best" "alias tmp_botskill best; showmenu_enemies"
 menuitem "good (default)" "alias tmp_botskill good; showmenu_enemies"
 menuitem "medium" "alias tmp_botskill medium; showmenu_enemies"
