--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -43,11 +43,12 @@ genmapitems "ac_mines ac_depot"
 
 newmenu setup
 
+menuitem "Set Name"              "saycommand /name unarmed"
 menuitem "Select Team"           "showmenu team"
 menuitem "Select Skins"          "showmenu skins"
 menuitem "Select Weapon"         "showmenu weapons"
-menuitem "Select Crosshair"		 "showmenu crosshairs"  
-menuitem "Set Name"              "saycommand /name "
+menuitem "Select Crosshair"	 "showmenu crosshairs"
+menuitem "Set Mouse Sensitivity" "saycommand /sensitivity 30"
 
 newmenu skins
 
@@ -71,7 +72,7 @@ menuitem "Tango"            "skin 1" "chmenumdl rvsf playermodels/counterterrori
 menuitem "Cobra"            "skin 2" "chmenumdl rvsf playermodels/counterterrorist/03 all 50 4"
 menuitem "Viper"            "skin 3" "chmenumdl rvsf playermodels/counterterrorist/04 all 50 4"
 menuitem "Swat"             "skin 4" "chmenumdl rvsf playermodels/counterterrorist/05 all 50 4"
-menuitem "Police"           "skin 4" "chmenumdl rvsf playermodels/counterterrorist/06 all 50 4"
+menuitem "Police"           "skin 5" "chmenumdl rvsf playermodels/counterterrorist/06 all 50 4"
 
 
 newmenu team
@@ -512,3 +513,21 @@ menuitem "Craig Fortune, 3dcafe, Rohrschach, lemong.fr,"
 menuitem "Mayang.com, Chris Zastrow, imageafter.com (textures)"
 
 alias master [ showmenu master ]
+
+
+newmenu botedit
+
+menuitem "addwp" "addwp 0"
+menuitem "addwp autoconnect" "addwp 1"
+menuitem "delwp"
+menuitem "setjumpwp"
+menuitem "unsetjumpwp"
+menuitem "setwpyaw"
+menuitem "addpath1way1"
+menuitem "addpath1way2"
+menuitem "addpath2way1"
+menuitem "addpath2way2"
+menuitem "delpath1way1" 
+menuitem "delpath1way2" 
+menuitem "delpath2way1"
+menuitem "delpath2way2"
