--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -205,11 +205,11 @@ genbotmaps "ac_complex ac_mines ac_depot ac_desert ac_desert2"
 
 newmenu master
 
-menuitem "Master Login" "saycommand /masterlogin "
+menuitem "Become Master" "setmaster"
 menuitem "Change Mode/Map" "showmenu gamemode"
 menuitem "Kick Player" "showmastermenu 0"
 menuitem "Ban Player" "showmastermenu 1"
-menuitem "Remove Bans" "mastercommand 2"
+menuitem "Remove Bans" "removebans"
 
 
 newmenu editing
