--- a/ac/source/vcpp/cube.vcproj
+++ b/ac/source/vcpp/cube.vcproj
@@ -154,6 +154,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/GS"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\enet\include;..\include"
 				PreprocessorDefinitions="WIN32,_DEBUG,_CONSOLE,ENET_DEBUG"
@@ -170,6 +171,7 @@
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="4"
 				CompileAs="0"
+				EnablePREfast="false"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -214,6 +216,8 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+				PageHeapConserveMemory="false"
+				PageHeapProtectionLocation="0"
 			/>
 			<Tool
 				Name="VCWebDeploymentTool"
@@ -492,7 +496,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
-				AdditionalDependencies="odbc32.lib odbccp32.lib zlib.lib opengl32.lib glu32.lib msvcrt.lib SDLmain.lib SDL.lib SDL_image.lib SDL_mixer.lib ws2_32.lib winmm.lib"
+				AdditionalDependencies="odbc32.lib odbccp32.lib zdll.lib opengl32.lib glu32.lib msvcrt.lib SDLmain.lib SDL.lib SDL_image.lib ws2_32.lib winmm.lib SDL_mixer.lib"
 				OutputFile="../../bin_win32/ac_server.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
@@ -507,6 +511,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				AdditionalOptions="/nologo /outputresource:&quot;..\..\bin_win32\ac_server.exe;#1&quot;"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -536,7 +541,19 @@
 			Filter="h;hpp;hxx;hm;inl"
 			>
 			<File
+				RelativePath="..\src\command.h"
+				>
+			</File>
+			<File
 				RelativePath="..\src\cube.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\entity.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\geom.h"
 				>
 			</File>
 			<File
@@ -544,6 +561,14 @@
 				>
 				<FileConfiguration
 					Name="Standalone|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Standalone Debug|Win32"
 					ExcludedFromBuild="true"
 					>
 					<Tool
@@ -562,13 +587,29 @@
 						Name="VCCustomBuildTool"
 					/>
 				</FileConfiguration>
+				<FileConfiguration
+					Name="Standalone Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath="..\src\model.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\protocol.h"
+				>
 			</File>
 			<File
 				RelativePath="..\src\protos.h"
 				>
 			</File>
 			<File
-				RelativePath=".\resource.h"
+				RelativePath="..\src\sound.h"
 				>
 			</File>
 			<File
@@ -580,6 +621,14 @@
 				>
 				<FileConfiguration
 					Name="Standalone|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Standalone Debug|Win32"
 					ExcludedFromBuild="true"
 					>
 					<Tool
@@ -598,6 +647,18 @@
 						Name="VCCustomBuildTool"
 					/>
 				</FileConfiguration>
+				<FileConfiguration
+					Name="Standalone Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath="..\src\world.h"
+				>
 			</File>
 			<Filter
 				Name="eneth"
@@ -657,6 +718,14 @@
 				>
 				<FileConfiguration
 					Name="Standalone|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Standalone Debug|Win32"
 					ExcludedFromBuild="true"
 					>
 					<Tool
@@ -754,6 +823,22 @@
 			<File
 				RelativePath="..\src\rendermodel.cpp"
 				>
+				<FileConfiguration
+					Name="Standalone|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Standalone Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\src\renderparticles.cpp"
@@ -1784,11 +1869,23 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\config\autoexec.cfg.default"
+				>
+			</File>
+			<File
 				RelativePath="..\..\config\default_map_settings.cfg"
 				>
 			</File>
 			<File
+				RelativePath="..\..\config\defaults.cfg"
+				>
+			</File>
+			<File
 				RelativePath="..\..\config\keymap.cfg"
+				>
+			</File>
+			<File
+				RelativePath="..\..\config\maprot.cfg"
 				>
 			</File>
 			<File
