--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -6,6 +6,7 @@ name "unarmed"     // change!
 loadcrosshair default.png	// choose another crosshair, see packages/misc/crosshairs/
 
 skin 0			   // change your look
+autoreload 1	   // reload the guns automatically
 
 alias maxmusicvol 120 // set higher if you want (max 255)
 
@@ -25,54 +26,73 @@ alias secondary [ weapon 1 ]
 alias melee [ weapon 0 ]
 alias grenades [weapon 6 ]
 
-bind 1 "primary"
-bind 2 "secondary"
-bind 3 "grenades"
-bind 4 "melee"
-
-lighterror 4 //set higher (for example 8) if you experience slowdown
+bind 1 primary
+bind 2 secondary
+bind 3 grenades
+bind 4 melee
+bind R reload
 
 //for alternative weapon binding (more economic) see the end of this file
 
-bind R reload
+lighterror 4 //set higher (for example 8) if you experience slowdown
 
-// zoom script 
-// NOTE: by default this script just devides your sensitivity by 2 while you use the scope
+alias altaction [
+	concatword altaction_ (curweapon)
+	s
+]
+
+alias quicknadethrow [ 
+	alias prevweapon (curweapon)
+	if (> (magvolume 6) 0) [
+		grenades
+		attack
+	] []
+	onrelease [ sleep 1 [ weapon $prevweapon ] ]
+]
+
+loop 7 [ concatword altaction_ $i; alias $s quicknadethrow ] // quick nade throw is default
+alias altaction_4 [ zoom 1; onrelease [ zoom 0 ] ] // zoom for the sniper rifle
+
+// NOTE: by default this zoom script just devides your sensitivity by 2 while you use the scope
 // if you want to set your own value for it, go to the following line and 
 // replace (div $sensitivity 2) by your desired sensitivity value:
 
 alias scopesens (div $sensitivity 2)
-alias oldsend $sensitivity
+alias oldsens $sensitivity
 
 alias zoom [ 
 	if (= $arg1 1) [
-        alias oldsens $sensitivity
-        sensitivity $scopesens
-        altaction 1
+		if (= $sensitivity $scopesens) [] [
+			alias oldsens $sensitivity
+			sensitivity $scopesens
+			setscope  1
+		]
     ] [
 		sensitivity $oldsens
-		altaction 0
+		setscope 0
 	]
 ]
 
-bind mouse2 [ zoom 1; onrelease [ zoom 0 ] ]
+//bind MOUSE2 [ zoom 1; onrelease [ zoom 0 ] ]
+bind MOUSE2 [ altaction ]
 
-// alternative zoom toggle:
+// alternative zoom toggle
 //alias ztoggle 0
-//bind mouse2 [ alias ztoggle (= ztoggle 0); zoom $ztoggle ]
+//bind MOUSE2 [ alias ztoggle (= ztoggle 0); zoom $ztoggle ]
 
-	
-alias tdm   [ mode 0; map $arg1 ]
-alias ts    [ mode 4; map $arg1 ]
-alias ctf   [ mode 5; map $arg1 ]
-alias dm    [ mode 2; map $arg1 ]
-alias ffa   [ mode 2; map $arg1 ]
-alias lms   [ mode 3; map $arg1 ]
-alias pf    [ mode 6; map $arg1 ]
-alias lss   [ mode 9; map $arg1 ]
-alias insta [ mode 10; map $arg1 ]
-alias osok  [ mode 10; map $arg1 ]
-alias tosok [ mode 11; map $arg1 ]
+alias vote [ mode $arg1; map $arg2 ]
+
+alias tdm   [ vote 0 $arg1 ]
+alias ts    [ vote 4 $arg1 ]
+alias ctf   [ vote 5 $arg1 ]
+alias dm    [ vote 2 $arg1 ]
+alias ffa   [ vote 2 $arg1 ]
+alias lms   [ vote 3 $arg1 ]
+alias pf    [ vote 6 $arg1 ]
+alias lss   [ vote 9 $arg1 ]
+alias insta [ vote 10 $arg1 ]
+alias osok  [ vote 10 $arg1 ]
+alias tosok [ vote 11 $arg1 ]
 
 //--------------------- editing -------------------------------
 
@@ -104,20 +124,10 @@ alias delta_edit_5 [ entproperty 0 $arg1 ]  // and the others
 
 alias delta_game_0 [ if (= $arg1 1) [ shiftweapon 1 ] [ shiftweapon -1 ] ]
 
-alias zfov 100
-
-alias delta_game_1 [
-  alias zfov (+ $zfov (* $arg1 (div $zfov -5)))
-  if (< $zfov 10)  [ alias zfov 10 ]
-  if (> $zfov 120) [ alias zfov 120 ]
-  fov $zfov
-]
-
-
 bind KP_MINUS "conskip 1"
 bind KP_PLUS "conskip -1"
 
-//------ALTERTNATIVE WEAPON SWITCHING------ no more 1-2-3-4 /wheel cycling no finger ever leaving WASD
+// alternative weapon switching, no more 1-2-3-4 /wheel cycling no finger ever leaving WASD
 //uncomment lines (remove the //) below to activate
 
 //alias delta_game_0 [ if (= $arg1 1) [ primary ] [ secondary ] ]
