--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -43,7 +43,7 @@ alias altaction [
 
 alias quicknadethrow [ 
 	alias prevweapon (curweapon)
-	if (> (magvolume 6) 0) [
+	if (> (magcontent 6) 0) [
 		grenades
 		attack
 	] []
@@ -51,7 +51,7 @@ alias quicknadethrow [
 ]
 
 loop 7 [ concatword altaction_ $i; alias $s quicknadethrow ] // quick nade throw is default
-alias altaction_4 [ zoom 1; onrelease [ zoom 0 ] ] // zoom for the sniper rifle
+alias altaction_4 [ zoom 1; onrelease [ zoom 0 ] ]
 
 // NOTE: by default this zoom script just devides your sensitivity by 2 while you use the scope
 // if you want to set your own value for it, go to the following line and 
