--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -205,11 +205,19 @@ genbotmaps "ac_complex ac_mines ac_depot ac_desert ac_desert2"
 
 newmenu master
 
-menuitem "Become Master" "setmaster"
+menuitem "Become Master" "setmaster 1"
+menuitem "Give Up Master" "setmaster 0"
+menuitem "Set Mastermode" "showmenu mastermode"
 menuitem "Change Mode/Map" "showmenu gamemode"
 menuitem "Kick Player" "showmastermenu 0"
 menuitem "Ban Player" "showmastermenu 1"
 menuitem "Remove Bans" "removebans"
+
+
+newmenu mastermode
+
+menuitem "Open" "mastermode 0"
+menuitem "Private" "mastermode 1"
 
 
 newmenu editing
