--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -31,6 +31,7 @@ bind 2 secondary
 bind 3 grenades
 bind 4 melee
 bind R reload
+bind G [ if $editing [ solid 0 ] [ quicknadethrow ] ]
 
 //for alternative weapon binding (more economic) see the end of this file
 
@@ -51,7 +52,8 @@ alias quicknadethrow [
 ]
 
 loop 7 [ concatword altaction_ $i; alias $s quicknadethrow ] // quick nade throw is default
-alias altaction_4 [ zoom 1; onrelease [ zoom 0 ] ]
+alias altaction_4 [ zoom 1; onrelease [ zoom 0 ] ] // sniper
+alias altaction_6 [ ] // grenade (none)
 
 // NOTE: by default this zoom script just devides your sensitivity by 2 while you use the scope
 // if you want to set your own value for it, go to the following line and 
