--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -40,6 +40,7 @@ registersound "weapon/grenade_throw" // S_GRENADETHROW
 registersound "weapon/pistol_akreload" // S_RAKIMBO
 registersound "misc/change_gun"		// S_GUNCHANGE
 registersound "player/gib"			// S_GIB
+registersound "misc/headshot"		// S_HEADSHOT
 
 alias fade [ // 0=in, 1=out
     alias stepsize 5
