--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -57,29 +57,29 @@ menuitem "RVSF Skins"             "showmenu rvsf"
 
 newmenu "cla"
 
-menumdl playermodels/terrorist/01 all 50 4
-menuitem "Comandante"           "skin 0" "chmenumdl cla playermodels/terrorist/01 all 50 4"
-menuitem "Psycho"               "skin 1" "chmenumdl cla playermodels/terrorist/02 all 50 4"
-menuitem "Bomber"               "skin 2" "chmenumdl cla playermodels/terrorist/03 all 50 4"
-menuitem "Ripper"               "skin 3" "chmenumdl cla playermodels/terrorist/04 all 50 4"
+menumdl playermodels/CLA/01 all 50 4
+menuitem "Comandante"           "skin 0" "chmenumdl cla playermodels/CLA/01 all 50 4"
+menuitem "Psycho"               "skin 1" "chmenumdl cla playermodels/CLA/02 all 50 4"
+menuitem "Bomber"               "skin 2" "chmenumdl cla playermodels/CLA/03 all 50 4"
+menuitem "Ripper"               "skin 3" "chmenumdl cla playermodels/CLA/04 all 50 4"
 
 
 newmenu "rvsf"
 
-menumdl playermodels/counterterrorist/01 all 50 4
-menuitem "Alpha"            "skin 0" "chmenumdl rvsf playermodels/counterterrorist/01 all 50 4"
-menuitem "Tango"            "skin 1" "chmenumdl rvsf playermodels/counterterrorist/02 all 50 4"
-menuitem "Cobra"            "skin 2" "chmenumdl rvsf playermodels/counterterrorist/03 all 50 4"
-menuitem "Viper"            "skin 3" "chmenumdl rvsf playermodels/counterterrorist/04 all 50 4"
-menuitem "Swat"             "skin 4" "chmenumdl rvsf playermodels/counterterrorist/05 all 50 4"
-menuitem "Police"           "skin 5" "chmenumdl rvsf playermodels/counterterrorist/06 all 50 4"
+menumdl playermodels/RVSF/01 all 50 4
+menuitem "Alpha"            "skin 0" "chmenumdl rvsf playermodels/RVSF/01 all 50 4"
+menuitem "Tango"            "skin 1" "chmenumdl rvsf playermodels/RVSF/02 all 50 4"
+menuitem "Cobra"            "skin 2" "chmenumdl rvsf playermodels/RVSF/03 all 50 4"
+menuitem "Viper"            "skin 3" "chmenumdl rvsf playermodels/RVSF/04 all 50 4"
+menuitem "Swat"             "skin 4" "chmenumdl rvsf playermodels/RVSF/05 all 50 4"
+menuitem "Police"           "skin 5" "chmenumdl rvsf playermodels/RVSF/06 all 50 4"
 
 
 newmenu team
 
-menumdl playermodels/terrorist/01 all 50 4
-menuitem "Cuban Liberations Army"			"team CLA" "chmenumdl team playermodels/terrorist/01 all 50 4"
-menuitem "Rabid Viper Special Forces"		"team RVSF" "chmenumdl team playermodels/counterterrorist/03 all 50 4"
+menumdl playermodels/CLA/01 all 50 4
+menuitem "Cuban Liberations Army"			"team CLA" "chmenumdl team playermodels/CLA/01 all 50 4"
+menuitem "Rabid Viper Special Forces"		"team RVSF" "chmenumdl team playermodels/RVSF/03 all 50 4"
 
 
 
@@ -475,7 +475,7 @@ menuitem "subdivision 16 (my 486 can do water too)" "watersubdiv 16"
 
 newmenu about
 
-menuitem "ActionCube v.0.9" ""
+menuitem "ActionCube v.0.92" ""
 menuitem ""
 menuitem "                     ...help" "showmenu help"
 menuitem "                     ...credits" "showmenu credits"
