*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@903 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/src/Makefile
+++ b/ac/source/src/Makefile
@@ -18,8 +18,8 @@ CLIENT_OBJS= \
 	physics.o \
 	protocol.o \
 	rendercubes.o \
-	renderextras.o \
 	rendergl.o \
+	renderhud.o \
 	rendermodel.o \
 	renderparticles.o \
 	rendertext.o \
@@ -30,6 +30,7 @@ CLIENT_OBJS= \
 	serverbrowser.o \
 	serverms.o \
 	sound.o \
+	texture.o \
 	tools.o \
 	weapon.o \
 	world.o \
