*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@919 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -100,8 +100,8 @@ gencrosshairs "default.png cube.png dot.png dot_wide.png o.png o_dot.png o_x.png
 
 newmenu multiplayer
 
-menuitem "Join Game"              	"servermenu"
-menuitem "Update Servers"         	"updatefrommaster"
+menuitem "Join Game"              	"showmenu server"
+menuitem "Update Servers"         	"updatefrommaster;showmenu server"
 menuitem "Vote"                   	"showmenu gamemode"
 menuitem "Disconnect"             	"disconnect"
 
