*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@922 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -127,15 +127,15 @@ alias tmp_mode
 alias tmp_botmap
 
 alias startbotmatch [
-	kickallbots
 	addnbot (div $tmp_numbots 2) RVSF $tmp_botskill
 	if ((> (mod $tmp_numbots 2) 0)) [ alias tmp_numbots (+ $tmp_numbots 1) ] []
 	addnbot (div $tmp_numbots 2) CLA $tmp_botskill
 ]
 
 alias startbotmap [
-	disconnect
+	if $connected [ disconnect ]
 	echo starting botmatch..
+    kickallbots
 	sleep 5000 startbotmatch
 	mode $tmp_mode
 	map $tmp_botmap
