*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@924 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -209,8 +209,8 @@ menuitem "Become Master" "setmaster 1"
 menuitem "Give Up Master" "setmaster 0"
 menuitem "Set Mastermode" "showmenu mastermode"
 menuitem "Change Mode/Map" "showmenu gamemode"
-menuitem "Kick Player" "showmastermenu 0"
-menuitem "Ban Player" "showmastermenu 1"
+menuitem "Kick Player" [showmenu "kick player"]
+menuitem "Ban Player" [showmenu "ban player"]
 menuitem "Remove Bans" "removebans"
 
 
