--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -6,11 +6,12 @@ newmenu main
 
 menuitem "Multiplayer"  	        "showmenu multiplayer"
 menuitem "Singleplayer"				"showmenu singleplayer"
-menuitem "Team/Player Setup"		"showmenu setup"
 menuitem "Load Map"					"showmenu maps"
+menuitem "Player Setup"				"showmenu setup"
 menuitem "Options"                  "showmenu options"
 menuitem "Editing"        			"showmenu editing"
-menuitem "About/Credits/Help"       "showmenu about"
+menuitem "Help"						"showmenu help"
+menuitem "About"			        "showmenu about"
 menuitem "Quit"						"quit"
 
 
@@ -475,38 +476,45 @@ menuitem "subdivision 16 (my 486 can do water too)" "watersubdiv 16"
 
 newmenu about
 
-menuitem "ActionCube v.0.92" ""
+menuitem "AssaultCube v0.93" ""
 menuitem ""
-menuitem "                     ...help" "showmenu help"
-menuitem "                     ...credits" "showmenu credits"
+menuitem "                     ...help"		"showmenu help"
+menuitem "                     ...credits"	"showmenu credits"
 menuitem ""
 menuitem "by 'Rabid Viper Productions'" "showmenu credits"
 menuitem "http://action.cubers.net" "echo sorry no built-in web browser yet :)"
 menuitem "a cube mod/tc based on the" ""
 menuitem ""
-menuitem "Cube game/engine" " "
-menuitem "by Wouter 'Aardappel' van Oortmerssen" "echo ..yes, the uber-coder"
+menuitem "Cube game/engine" ""
+menuitem "by Wouter 'Aardappel' van Oortmerssen" ""
+menuitem "and others" ""
 menuitem "http://www.cubeengine.com/" "echo sorry no built-in web browser yet :)"
-
 
 
 newmenu help
 
+menuitem "AssaultCube reference"	"showmenu reference"
+menuitem "default keys"				"showmenu keys"
+menuitem "" ""
+menuitem "..for further information see the README"
+
+
+newmenu keys
+
 menuitem "r                        - reload Gun" ""
 menuitem "right mouse button     - use scope" ""
-menuitem "Mousewheel Up/Down  - cycle weapons" ""
+menuitem "mousewheel up/down  - cycle weapons" ""
 menuitem ""
-menuitem "b                        - Outfit Menu" ""
-menuitem "" ""
-menuitem "-for further information read readme.html-"
+menuitem "b                        - weapon menu" ""
+
 
 newmenu credits
 
 menuitem "Arghvark    Project Leader" ""
 menuitem "              Concept, Coding" ""
-menuitem "Verbal       QA, Advisor, Lead Tester" ""
-menuitem "driAn        Lead Coder, Webdesign" "" 
+menuitem "driAn        Lead Coder" "" 
 menuitem "makkE       Lead Artist" ""
+menuitem "Verbal       QA, Advisor, Lead Tester" ""
 menuitem "              Maps, Models, Skins, Animation" ""
 menuitem "              Sound, some Textures, 2D-Art" ""
 menuitem "Nieb         Models, Hosting" ""
